<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutErrorState"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/ivUfo"
        android:layout_width="@dimen/error_icon_size"
        android:layout_height="@dimen/error_icon_size"
        android:layout_marginBottom="@dimen/error_icon_margin_bottom"
        android:contentDescription="@string/ufo_icon"
        android:src="@drawable/ic_ufo"
        app:layout_constraintBottom_toTopOf="@+id/tvErrorTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvErrorTitle"
        style="@style/Title3Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/someone_broke_everything"
        app:layout_constraintBottom_toTopOf="@+id/tvErrorHelper"
        app:layout_constraintEnd_toEndOf="@+id/ivUfo"
        app:layout_constraintStart_toStartOf="@+id/ivUfo"
        app:layout_constraintTop_toBottomOf="@+id/ivUfo" />

    <TextView
        android:id="@+id/tvErrorHelper"
        style="@style/HeadlineRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/error_helper_text_margin_top"
        android:text="@string/we_ll_try_to_fix_it_quickly"
        app:layout_constraintBottom_toTopOf="@+id/btnTryAgain"
        app:layout_constraintEnd_toEndOf="@+id/tvErrorTitle"
        app:layout_constraintStart_toStartOf="@+id/tvErrorTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorTitle"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnTryAgain"
        style="@style/TextButtonHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/try_again"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvErrorHelper"
        app:layout_constraintStart_toStartOf="@+id/tvErrorHelper"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorHelper" />

</androidx.constraintlayout.widget.ConstraintLayout>
